Fixed webapp versoin